additional changes based on customer request